// Original file: src/services/proto/employee.proto


export interface GrpcEmployeeAttributes {
  'firstName'?: (string);
  'lastName'?: (string);
  'gender'?: (string);
  'race'?: (string);
  'position'?: (string);
  'startDate'?: (string);
  'shiftPreference'?: (string);
  'branchName'?: (string);
  'region'?: (string);
  'country'?: (string);
  'phoneNumber'?: (string);
  'email'?: (string);
  'password'?: (string);
  'id'?: (string);
  'userRole'?: (string);
  'division'?: (string);
}

export interface GrpcEmployeeAttributes__Output {
  'firstName': (string);
  'lastName': (string);
  'gender': (string);
  'race': (string);
  'position': (string);
  'startDate': (string);
  'shiftPreference': (string);
  'branchName': (string);
  'region': (string);
  'country': (string);
  'phoneNumber': (string);
  'email': (string);
  'password': (string);
  'id': (string);
  'userRole': (string);
  'division': (string);
}
